ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 2000m
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: home.box
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 8082
    - host: speed.home.box
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: librespeed
                port:
                  number: 80
    - host: calibre.home.box
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre
                port:
                  number: 8083
    - host: file.home.box
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 8081
    - host: deluge.home.box
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deluge
                port:
                  number: 8112
    - host: calibre.home.box
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre
                port:
                  number: 8081
    - host: file.home.box
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre
                port:
                  number: 8082
